# it

./: .gitignore  Cargo.toml  ISSUE.md  README.md  flake.nix  package.json
backend/: Cargo.toml
boot/: Cargo.toml
bot/: Cargo.toml  pnpm-lock.yaml
core/: Cargo.toml
migration/: Cargo.toml
src/commands/: issue.ts
