[package]
name = "it-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.20", features = ["macros", "runtime-tokio", "sqlx-postgres"] }
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
